ComputeStyleChangeFor does not need to put all the in-flows into the changelist.  Propagate the "current" toplevel change as the min change as we go down the in-flow and special sibling list.  Bug 166205, r+sr=dbaron